fix party spec